Injeção de dependência e Implemetando os metodos na Service e na Repository

--- a/Senac.SiegGestaoEscolar.Api/Senac.SiegGestaoEscolar.Api.Http.csproj
+++ b/Senac.SiegGestaoEscolar.Api/Senac.SiegGestaoEscolar.Api.Http.csproj
@@ -12,6 +12,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Senac.SiegGestaoEscolar.Domain\Senac.SiegGestaoEscolar.Domain.csproj" />
+    <ProjectReference Include="..\Senac.SiegGestaoEscolar.Infra.Data\Senac.SiegGestaoEscolar.Infra.Data.csproj" />
   </ItemGroup>
 
 </Project>
