--- a/Senac.SiegGestaoEscolar.Infra.Data/Senac.SiegGestaoEscolar.Infra.Data.csproj
+++ b/Senac.SiegGestaoEscolar.Infra.Data/Senac.SiegGestaoEscolar.Infra.Data.csproj
@@ -11,4 +11,8 @@
     <PackageReference Include="Microsoft.Data.SqlClient" Version="6.0.2" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Senac.SiegGestaoEscolar.Domain\Senac.SiegGestaoEscolar.Domain.csproj" />
+  </ItemGroup>
+
 </Project>
