--- a/Senac.SiegGestaoEscolar.Domain/Senac.SiegGestaoEscolar.Domain.csproj
+++ b/Senac.SiegGestaoEscolar.Domain/Senac.SiegGestaoEscolar.Domain.csproj
@@ -7,6 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Dtos\Request\Cursos\VincularCursoRequest.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\Senac.SiegGestaoEscolar.Models\Senac.SiegGestaoEscolar.Models.csproj" />
   </ItemGroup>
 
